tests/error/no_namespace.gw
#! [contains] has no namespace
class C{
  class private D{}
}
var int.D d;
